Adjust line-height to avoid unnecessary scrollbar.

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -15,7 +15,7 @@ body {
   bottom: 0;
   width: 100%;
   height: $footer-height;
-  line-height: $footer-height;
+  line-height: $footer-height - 1px;
   border-top: 1px solid $gray-200;
 
   p {
